update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Les-Sources_70319
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70319-h/images/cover.jpg
 creator:
   author:
     agent_name: Gratry, Alphonse
     gutenberg_agent_id: '55703'
     url: http://www.gutenberg.org/2009/agents/55703
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70319#Les-Sources
 gutenberg_issued: '2023-03-18'
 identifiers:
   gutenberg: '70319'
